--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-DATABASE_URL=postgresql://neondb_owner:npg_Diz4Rb6SMqFP@ep-wild-dream-aecjzroa.c-2.us-east-2.aws.neon.tech/neondb?
+DATABASE_URL=your-databaseurl
 sslmode=require
